--- a/style.css
+++ b/style.css
@@ -80,9 +80,10 @@ body{
     padding-top: 10.5rem;
     padding-bottom: 15rem;
 }
-.home h2,.info h2,.story h2{
+.home h2,.info h2,.story h2,.gallery h2{
     color: var(--blue);
     font-size: 3.5rem;
+    font-family: 'borel',cursive;
 }
 .home h2,.home h4{
     font-family: 'borel',cursive;
@@ -152,12 +153,12 @@ body{
     font-size: 0.9rem;
     font-weight: 200;
 }
-.story{
+.story,.gallery{
     padding-top: 10rem;
     padding-bottom: 8rem;
 
 }
-.story span{
+.story span,.gallery span{
     text-transform: uppercase;
     color: #666;
     font-size: 0.9rem;
@@ -169,7 +170,7 @@ body{
     padding-top: 1rem;
     font-family: 'borel',cursive;
 }
-.story p{
+.story p,.gallery p{
     font-size: 1rem;
     font-weight: 300;
 }
@@ -269,6 +270,24 @@ body{
     top: 81px;
     right: -13px;
 }
+.timeline li.timeline-inverted .timeline-panel{
+    float: right;
+}
+.timeline li.timeline-inverted .timeline-panel::before{
+    border-left-width: 0;
+    border-right-width: 15px;
+    left: -15px;
+    right: auto;
+}
+.timeline li.timeline-inverted .timeline-panel::after{
+    border-left-width: 0;
+    border-right-width: 14px;
+    left: -13px;
+    right: auto;
+}
+.gallery{
+    background-color: #fdcefd;
+}
 
 
 /* Media Query */
@@ -295,6 +314,30 @@ body{
     .home .heart{
         display: none;
     }
+    .timeline::before{
+        left: 60px;
+    }
+    .timeline li .timeline-image{
+        left: 15px;
+        margin-left: 45px;
+        top: 16px;
+    }
+    .timeline li .timeline-panel{
+        width: calc((100%-200px));
+        float: right;
+    }
+    .timeline li .timeline-panel::before{
+        border-left-width: 0;
+        border-right-width: 15px;
+        left: -15px;
+        right: auto;
+    }
+    .timeline li .timeline-panel::after{
+        border-left-width: 0;
+        border-right-width: 14px;
+        left: -13px;
+        right: auto;
+    }
 
 }
 /* Tablet */
@@ -313,6 +356,10 @@ body{
         font-size: 1.7rem;
         text-align: center;
     }
+    .timeline li .timeline-image{
+        width: 140px;
+        height: 140px;
+    }
 
 }
 /* Phone */
@@ -328,5 +375,23 @@ body{
     .mynavbar .nav-link{
         font-size: 1.5rem;
         text-align: center;
+    }
+    .timeline li .timeline-image{
+        width: 80px;
+        height: 80px;
+    }
+    .timeline li .timeline-panel{
+        width: 65%;
+        transform: translateX(-20px);
+        -webkit-transform: translateX(-20px);
+        -moz-transform: translateX(-20px);
+        -ms-transform: translateX(-20px);
+        -o-transform: translateX(-20px);
+    }
+    .timeline li .timeline-panel::before{
+        top: 30px;
+    }
+    .timeline li .timeline-panel::after{
+        top: 31px;
     }
 }
